# ant_engine

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: rust.yml
ant_engine/: Cargo.toml
ant_engine/src/server/: mod.rs
ant_engine/src/shared/: game.rs
ant_engine/tests/: integration_tests.rs
ant_engine_client/: Cargo.toml
ant_engine_client/src/: main.rs
ant_engine_server/: Cargo.toml
ant_engine_server/src/: main.rs
ant_engine_shared/: Cargo.toml
ant_engine_shared/src/: game.rs  lib.rs  networking.rs
src/: lib.rs  utils.rs
src/client/: main.rs
src/server/: game_server.rs  lobby.rs  main.rs  mod.rs
src/shared/: game.rs  protocols.rs
tests/: integration_tests.rs
