[package]
name = "ant_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.202", features = ["derive"] }
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
vulkano-win = "0.34.0"
winit = "0.30.1"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
